<resources>
    <string name="app_name">Osu</string>
    <string name="osu_widget">Osu!</string>
    <string name="user_id">Id:</string>
    <string name="username">Username:</string>
    <string name="pp_rank">Rank:</string>
    <string name="level">Level:</string>
    <string name="playcount">Playcount:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="rank_ss">SS:</string>
    <string name="rank_ssh">SS:</string>
    <string name="rank_s">S:</string>
    <string name="rank_sh">S:</string>
    <string name="rank_a">A:</string>
    <string name="str_empty"> </string>
    <string name="loading">Carregando</string>
    <string name="no_search_term"> User invalido!</string>
    <string name="no_network"> Sem rede!</string>
    <string name="usuario"> Insira o usuário</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="usuario_main">USUÁRIO</string>
    <string name="score_main">SCORE</string>
    <string name="localizacao_main">LOCALIZAÇÃO</string>
    <string name="forum_main">FÓRUM</string>
    <string name="welcome">Welcome To Osu!</string>

    <string name="usuario_login">Usuário: </string>
    <string name="senha_login">Senha: </string>
    <string name="usuario_hint">usuário</string>
    <string name="senha_hint">senha</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="button_login">ENTRAR</string>
    <string name="button_cad">CADASTRAR</string>
    <string name="email">Email: </string>
    <string name="email_hint">email</string>
    <string name="btn_goto_cad">Não sou cadastrado</string>
    <string name="btn_historico">HISTÓRICO</string>
    <string name="btn_pesquisar">PESQUISAR</string>
    <string name="score">Score: </string>
    <string name="max_combo">Max Combo: </string>
    <string name="miss_count">Miss Count: </string>
    <string name="rank">Rank: </string>
    <string name="localization">PEGAR LOCALIZAÇÃO</string>
</resources>