<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.MainActivity">

    <Button
        android:id="@+id/btnUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario_main" />

    <Button
        android:id="@+id/btnScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_main" />

    <Button
        android:id="@+id/btnLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localizacao_main" />

    <Button
        android:id="@+id/btnForum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forum_main" />

</LinearLayout>