<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/osu_dark_background"
    tools:context=".Activitys.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="73dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtUserCad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usuario_login"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextUserCad"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:autofillHints="usuario"
                android:ems="10"
                android:hint="@string/usuario_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHighlight="#E3609A"
                android:textColorHint="@color/cardview_dark_background"
                android:textColorLink="#E3609A" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtEmailCad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextEmailCad"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:autofillHints="senha"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/cardview_dark_background"
                android:textColorLink="@color/pink"
                android:textCursorDrawable="@color/purple_200" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtSenhaCad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/senha_login"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextSenhaCad"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:autofillHints="senha"
                android:ems="10"
                android:hint="@string/senha_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/cardview_dark_background"
                android:textColorLink="@color/pink"
                android:textCursorDrawable="@color/purple_200" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="59dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:background="@drawable/background_osu"
                android:text="@string/button_cad"
                app:backgroundTint="#E3399A" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>